# arduimeter

./: README.md  varioLCD.ino
MS5611-custom/: CMakeLists.txt
MS5611-custom/MS5611-master/: MS5611.cpp  MS5611.h  MS5611Sample.cpp  MS5611Sample.h
MS5611-custom/MS5611-master/examples/MS5611data2lcd/: MS5611data2lcd.ino
MS5611-custom/MS5611-master/examples/MS5611data2serial/: MS5611data2serial.ino
MS5611-custom/MS5611-master/examples/MS5611data2serialWfilter/: MS5611data2serialWfilter.ino
